# EnergyPATHWAYS

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: build_test.yml  build_user_guide.yml  pytest.yml
EP interface/: scenario_builder.py  scenario_builder.xlsm  start_runs.sh
docs/: requirements.txt
docs/source/: .roles.rst  conf.py  cookbook.rst  database.rst  index.rst  interface.rst  introduction.rst  methodology.rst  outputs.rst  setup.rst  user_guide.rst
docs/source/_static/css/: roles.css
docs/source/_templates/: layout.html
docs/source/images/: light duty auto flow.pptx
docs/source/model_user_guide/: 1_ui_guide_overview.rst  2_installation_and_setup.rst  3_running_the_model.rst  4_input_database_methodology.rst  5_input_database_constituent_file_details.rst  6_model_output_file_descriptions.rst  7_references.rst  8_appendix.rst
energyPATHWAYS/: __init__.py  config.py  data_object.py  demand.py  demand_measures.py  demand_subsector_classes.py  demand_technologies.py  export_to_rio.py  geomapper.py  helper_multiprocess.py  outputs.py  pathways_model.py  rollover.py  run.py  scenario_loader.py  shapes2.py  shared_classes.py  time_series.py  unit_converter.py  util.py
energyPATHWAYS/etc/: validation.csv
energyPATHWAYS/tests/: test_util.py
model_building_tools/create_geography_tables/: create_geography_tables.py
model_building_tools/create_geography_tables/inputs/: GeographiesSpatialJoin.csv
model_building_tools/create_map_keys_from_drivers/: map_key_from_driver.py
model_building_tools/gen_classes/: json_loader.py
model_building_tools/gen_classes/geodata/: Geographies.csv  GeographiesSpatialJoin.csv  GeographyMapKeys.csv
model_building_tools/hvac profiles/: degree_day_api.py  finalize_com_hvac.py  finalize_res_hvac.py  shape_file_centroid.py
